# bitloom-costumes

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: costumes.h  costumes_defines.h
src/: costumes.c
tests/: test_main.c
tests/config/: costumes_config.h
tests/costumes/: costumes_defines.h  test_costumes.c
